# altary-mcp-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/altary_mcp/: __init__.py  client.py  config.py  server.py
